{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 11,
  "lineage": "4b1e3ce8-2607-f98e-9377-2f3915968fca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tictactoe_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e5276ebb8451442",
            "arn": "arn:aws:ec2:us-east-1:442824727401:instance/i-098acde79ee17e80d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098acde79ee17e80d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "AWS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038c00181125b969f",
            "private_dns": "ip-172-31-45-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.250",
            "public_dns": "ec2-18-232-70-108.compute-1.amazonaws.com",
            "public_ip": "18.232.70.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0119cd215eab77ae8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "terraform-20240428210105119600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025a1d8f899d16a9a",
            "tags": {
              "Name": "Tic Tac Toe TF"
            },
            "tags_all": {
              "Name": "Tic Tac Toe TF"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e4c02ac376d5ca44"
            ]
          },
          "dependencies": [
            "aws_security_group.security_group_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442824727401:internet-gateway/igw-006438d1b16eafdcf",
            "id": "igw-006438d1b16eafdcf",
            "owner_id": "442824727401",
            "tags": {
              "Name": "Gateway TF"
            },
            "tags_all": {
              "Name": "Gateway TF"
            },
            "vpc_id": "vpc-088858a27f7bea9c2"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442824727401:route-table/rtb-03069e18a4a63296a",
            "id": "rtb-03069e18a4a63296a",
            "owner_id": "442824727401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006438d1b16eafdcf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table TF"
            },
            "tags_all": {
              "Name": "Route Table TF"
            },
            "timeouts": null,
            "vpc_id": "vpc-088858a27f7bea9c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091ddde38e101e8ca",
            "route_table_id": "rtb-03069e18a4a63296a",
            "subnet_id": "subnet-076bc4b27c3398ee3"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_tf",
            "aws_route_table.route_table_tf",
            "aws_subnet.subnet_tf",
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442824727401:security-group/sg-0e4c02ac376d5ca44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4c02ac376d5ca44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240428210105119600000001",
            "name_prefix": "terraform-",
            "owner_id": "442824727401",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00ab82988fb6599c9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442824727401:subnet/subnet-076bc4b27c3398ee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076bc4b27c3398ee3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442824727401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet TF"
            },
            "tags_all": {
              "Name": "Subnet TF"
            },
            "vpc_id": "vpc-088858a27f7bea9c2"
          },
          "dependencies": [
            "aws_vpc.vpc_tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442824727401:vpc/vpc-088858a27f7bea9c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd79ae179e7a3861",
            "default_route_table_id": "rtb-01e6d6a1ff377fb29",
            "default_security_group_id": "sg-02caec9739814636d",
            "dhcp_options_id": "dopt-022864941df6f906d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088858a27f7bea9c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01e6d6a1ff377fb29",
            "owner_id": "442824727401",
            "tags": {
              "Name": "VPC TF"
            },
            "tags_all": {
              "Name": "VPC TF"
            }
          }
        }
      ]
    }
  ]
}